<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PlcEventHmi" Id="{c563a2e3-1509-4c3f-acb4-f78985702eaf}">
    <Declaration><![CDATA[TYPE ST_PlcEventHmi :
STRUCT
	nEventID:INT;
	nEventType:INT;	(*1:Alarm , 2:Warning , *)
	nEventColor:UDINT;
	nTextColor:UDINT;
	sEventTime:STRING(32);
	sEventAckTime:STRING(32);
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>